# car-rental-api

./: Cargo.toml  car_rental_dummy_data.json
src/: database.rs  main.rs  models.rs
